# kmap

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  profile_inference.py  profile_ops.py  pyproject.toml  requirements-dev.txt  requirements.txt
csrc/: _circuit_eval.c  _tape_runner.c  kllm.c  kllm_compile.c  kllm_gates.c  tape_runner.h
csrc/_tape_runner.so.dSYM/Contents/: Info.plist
csrc/_tape_runner.so.dSYM/Contents/Resources/Relocations/aarch64/: _tape_runner.so.yml
src/kllm/: __init__.py  _codebook_gemv.c  binary_ops.py  bitops.py  chip.py  circuit_compiler.py  circuit_executor.py  circuit_graph.py  circuit_model.py  circuit_tokenizer.py  circuits.py  cli.py  codebook.py  compare.py  compiler.py  device.py  evaluator.py  fabric.py  graph_optimizer.py  hdl_export.py  hdl_simulate.py  inference.py  jit_optimizer.py  model.py  native_runner.py  ops_compiler.py  optimizer.py  processor.py  tokenizer.py  torch_engine.py
src/kllm/compiler/: __init__.py  circuit_compiler.py  circuit_tokenizer.py  fabric.py
src/kllm/device/: __init__.py  chip.py  machine.py  native_runner.py  processor.py  virtual_device.py
src/kllm/graph/: __init__.py  circuit_executor.py  circuit_graph.py  evaluator.py  graph_optimizer.py
src/kllm/hdl/: __init__.py  hdl_export.py  hdl_simulate.py
tests/: test_binary_ops.py  test_bitops.py  test_c_executor.py  test_circuit_compiler.py  test_circuit_graph.py  test_circuit_tokenizer.py  test_circuits.py  test_cli.py  test_compare.py  test_compiler.py  test_device.py  test_graph_optimizer.py  test_hdl_export.py  test_integration.py  test_jit_optimizer.py  test_machine.py  test_optimizer.py  test_processor.py  test_tokenizer.py  test_torch_engine.py
